Clean and document added analyses

--- a/src/negative_control.ipynb
+++ b/src/negative_control.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,9 @@
     "b2_group_subjective_study2 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/shine-network-analysis/SHINE/final_buckets/subjective_grouperceptions_test.csv')\n",
     "\n",
     "# Sample characteristics\n",
-    "baseline_demo_study2 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/SHINE-responsiveness-analysis/data/baseline/demo_study2_full.csv')\n",
-    "baseline_demo_study1 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/SHINE-responsiveness-analysis/data/baseline/demo_study1_full.csv')\n",
-    "baseline_auq_study1 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/SHINE-responsiveness-analysis/data/baseline/study_1_all_drinking.csv')\n",
+    "baseline_demo_study2 = pd.read_csv('../data/baseline/demo_study2_full.csv')\n",
+    "baseline_demo_study1 = pd.read_csv('../data/baseline/demo_study1_full.csv')\n",
+    "baseline_auq_study1 = pd.read_csv('../data/baseline/study_1_all_drinking.csv')\n",
     "\n",
     "# Study 1 & 2 drinking/responsiveness data (output -> prediction target)\n",
     "if def_response_drink_occasions == -1:\n",
