--- a/src/model_free_evidence.ipynb
+++ b/src/model_free_evidence.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "# Study 2 peer perception data (test input)\n",
     "b2_group_subjective_study2 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/shine-network-analysis/SHINE/final_buckets/subjective_grouperceptions_test.csv')\n",
-    "baseline_demo_study2 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/SHINE-responsiveness-analysis/data/baseline/demo_study2_full.csv')\n",
+    "baseline_demo_study2 = pd.read_csv('../data/baseline/demo_study2_full.csv')\n",
     "\n",
     "# Study 1 & 2 drinking/responsiveness data (output -> prediction target)\n",
     "if def_response_drink_occasions == -1:\n",
