Finish code cleanup and documentation

--- a/src/model_free_evidence.ipynb
+++ b/src/model_free_evidence.ipynb
@@ -83,7 +83,7 @@
     "# b7_objective_group_drinking = pd.read_csv('../data/added_analysis/social_group_drinking.csv', index_col=0)\n",
     "\n",
     "# Study 2 peer perception data (test input)\n",
-    "b2_group_subjective_study2 = pd.read_csv('/Users/fmagdalena/Documents/GitHub/shine-network-analysis/SHINE/final_buckets/subjective_grouperceptions_test.csv')\n",
+    "b2_group_subjective_study2 = pd.read_csv('../data/baseline/subjective_grouperceptions_test.csv')\n",
     "baseline_demo_study2 = pd.read_csv('../data/baseline/demo_study2_full.csv')\n",
     "\n",
     "# Study 1 & 2 drinking/responsiveness data (output -> prediction target)\n",
@@ -93,12 +93,6 @@
     "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_-0_5.csv', index_col=0).reset_index()\n",
     "elif def_response_drink_occasions == -2:\n",
     "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_-2.csv', index_col=0).reset_index()\n",
-    "elif def_response_drink_occasions == 'who':\n",
-    "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_who_rdl.csv', index_col=0).reset_index()\n",
-    "elif def_response_drink_occasions == -0.9:\n",
-    "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_-0.9.csv', index_col=0).reset_index()\n",
-    "elif def_response_drink_occasions == -1.5:\n",
-    "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_-1.5.csv', index_col=0).reset_index()\n",
     "elif def_response_drink_occasions == -0.1:\n",
     "    responsive_study1 = pd.read_csv('../data/intervention_time/responsiveness_study1_-0.1.csv', index_col=0).reset_index()\n",
     "\n",
